Added MAC address table to L2 switch framework. Intermediate commit, needs testing.

--- a/L2_switch/Makefile
+++ b/L2_switch/Makefile
@@ -1,6 +1,6 @@
 # Module name and objects
 obj-m := l2_switch.o
-l2_switch-objs := src/l2_switch_main.o src/packet_handler.o
+l2_switch-objs := src/l2_switch_main.o src/packet_handler.o src/mac_table.o
 
 # Add subdirectory for headers and enable debug flags
 EXTRA_CFLAGS += -I$(PWD)/include -g -DDEBUG
